PR/44523: Taylor R Campbell: mount_hfs badly handles file names with slashes in them, encode them as colons. XXX: Should encode : as :: too?